Fixed bottom scrollbar

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   padding: 0px;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
 }
 
 #nav {
